@@ -262,6 +262,8 @@ ifeq ($(WITH_TLS),yes)
 	BROKER_CPPFLAGS:=$(BROKER_CPPFLAGS) -DWITH_TLS
 	BROKER_LDADD:=$(BROKER_LDADD) -lssl -lcrypto
 	CLIENT_CPPFLAGS:=$(CLIENT_CPPFLAGS) -DWITH_TLS
+	CLIENT_LDADD:=$(CLIENT_LDADD) -lssl -lcrypto
+	CLIENT_STATIC_LDADD:=$(CLIENT_STATIC_LDADD) -lssl -lcrypto
 	LIB_CPPFLAGS:=$(LIB_CPPFLAGS) -DWITH_TLS
 	LIB_LIBADD:=$(LIB_LIBADD) -lssl -lcrypto
 	PASSWD_LDADD:=$(PASSWD_LDADD) -lcrypto
